--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <li>Don't spam ping auctioneers.</li>
                     <li>If there is no response in 2 hours, you may ping another auctioneer.</li>
                     <li>Pokémon cannot be withdrawn after receiving a bid.</li>
-                    <li class="final-rule">No sniping (bidding in the last 10 minutes) — offenders will be punished.</li>
+                    <li class="final-rule">No sniping (bidding in the last 5 minutes) — offenders will be punished.</li>
                 </ul>
             </div>
             
@@ -268,6 +268,18 @@
                     <li>For Ditto breeds: Trips (70+ IVs) and above.</li>
                     <li>Shinies, gleams, rads, shadows, and skins of any IVs are allowed.</li>
                     <li class="final-rule">Don't list Pokémon under 40m value for more than 24 hours.</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h2>Auction Rules 📜</h2>
+                <ul class="rules-list">
+                    <li>Make sure your Pokemon meets the Standards mentioned above.</li>
+                    <li>Do not disrespect other users/auctioneers.</li>
+                    <li>Avoid bugging auctioneers to auction a poke even after they refused to.</li>
+                    <li>Users can have at max of 3 of their pokes auctioned at the same time.</li>
+                    <li>Pokemon owners are not allowed to get their pokes returned after it recieves a bid.</li>
+                    <li class="final-rule">If your request for auction details seem off,<br>an Auctioneer holds every right to suggest better details.</li>
                 </ul>
             </div>
         </div>
