--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
             <button class="tab-link active" data-tab="rules">Auction Rules</button>
             <button class="tab-link" data-tab="flow">Auction Flow</button>
             <button class="tab-link" data-tab="roles">Roles & Commands</button>
+            <button class="tab-link" data-tab="reps">Reps</button>
         </div>
 
         <div id="rules" class="tab-content active">
@@ -255,9 +256,11 @@
                 <ul class="rules-list">
                     <li>Ping any auctioneer and wait for a 👍 before sending details (min bid, increment, buyout, time, etc).</li>
                     <li>Don't spam ping auctioneers.</li>
-                    <li>If there is no response in 2 hours, you may ping another auctioneer.</li>
+                    <li>If no response in 2 hrs, ping another.</li>
                     <li>Pokémon cannot be withdrawn after receiving a bid.</li>
-                    <li class="final-rule">No sniping (bidding in the last 5 minutes) — offenders will be punished.</li>
+                    <li>Default/base auction time: <b>12–16 hours</b>.</li>
+                    <li>Special Auctions last <b>24 hours</b>.</li>
+                    <li class="final-rule">No sniping (bidding in last 5 mins) — offenders will be punished.</li>
                 </ul>
             </div>
             
@@ -266,8 +269,7 @@
                 <ul class="rules-list">
                     <li>Minimum Fenta+ required (Quads are allowed if 90+ IVs).</li>
                     <li>For Ditto breeds: Trips (70+ IVs) and above.</li>
-                    <li>Shinies, gleams, rads, shadows, and skins of any IVs are allowed.</li>
-                    <li class="final-rule">Don't list Pokémon under 40m value for more than 24 hours.</li>
+                    <li class="final-rule">Shinies, gleams, rads, shadows, and skins of any IVs are allowed.</li>
                 </ul>
             </div>
 
@@ -277,8 +279,9 @@
                     <li>Make sure your Pokemon meets the Standards mentioned above.</li>
                     <li>Do not disrespect other users/auctioneers.</li>
                     <li>Avoid bugging auctioneers to auction a poke even after they refused to.</li>
-                    <li>Users can have at max of 3 of their pokes auctioned at the same time.</li>
+                    <li>Users can have at max of 5 of their pokes auctioned at the same time.</li>
                     <li>Pokemon owners are not allowed to get their pokes returned after it recieves a bid.</li>
+                    <li>Poke Owners cannot bid on their own pokes, If done they will be granted a shiny <code>aucban</code>.</li>
                     <li class="final-rule">If your request for auction details seem off,<br>an Auctioneer holds every right to suggest better details.</li>
                 </ul>
             </div>
@@ -288,12 +291,13 @@
              <div class="card">
                 <h2>Auction Flow</h2>
                 <ol class="flow-list">
-                    <li>Once a Pokémon is auctioned, it is held by the bot, not the auctioneer.</li>
-                    <li>Upon a bid, the amount is deducted from the bidder's wallet.</li>
-                    <li>In case of an outbid, the bid of the previous bidder is refunded instantly.</li>
-                    <li>When the auction ends, the winner receives the Pokémon automatically.</li>
-                    <li>The final bid amount is credited to the auctioneer's wallet.</li>
-                    <li>The auctioneer sends the payment (after any cuts) to the Pokémon's original owner.</li>
+                    <li>Once a Pokémon is auctioned, it is removed from the auctioneer.</li>
+                    <li>Upon a bid, the bidder's wallet is updated (amount is deducted).</li>
+                    <li>In case of an outbid, the previous bidder is refunded.</li>
+                    <li>When the auction ends, the winner gets the Pokémon automatically.</li>
+                    <li>The final bid amount is credited to the auctioneer.</li>
+                    <li>The auctioneer sends the payment (after cuts) to the Pokémon's owner.</li>
+                    <li>The cut (commission) must be <b>at least 10%</b> or higher (chosen by owner).</li>
                     <li class="final-rule">The auction is now complete.</li>
                 </ol>
             </div>
@@ -309,10 +313,10 @@
                     <h4>Rules</h4>
                     <ul class="rules-list">
                         <li>You may decline an auction request.</li>
-                        <li>You may end auctions early at the owner's request.</li>
-                        <li>You may edit auctions on the owner's valid request.</li>
-                        <li>Cuts (if any) must be discussed before starting the auction.</li>
-                        <li>Auctioneers can't have more than 4 active auctions at a time.</li>
+                        <li>You may end auctions early at owner's request.</li>
+                        <li>You may edit auctions on valid owner requests.</li>
+                        <li>Cuts must be discussed before starting — if not, default 10% applies.</li>
+                        <li>Auctioneers can't have more than <b>5 active auctions</b> at once.</li>
                         <li class="final-rule">You cannot break the Pokémon standards rules.</li>
                     </ul>
                 </div>
@@ -323,13 +327,45 @@
                     <p><code>/bid</code>, <code>/list</code>, <code>/profile</code></p>
                     <h4>Notes</h4>
                     <ul class="rules-list">
-                        <li>Place your bid using the <code>/bid</code> command.</li>
-                        <li>View all active auctions with <code>/list</code>.</li>
-                        <li>Track your wins and toggle outbid notifications with <code>/profile</code>.</li>
-                        <li>Users can't have more than 3 of their Pokémon auctioned at a time.</li>
+                        <li>Bid using <code>/bid</code>.</li>
+                        <li>View auctions with <code>/list</code>.</li>
+                        <li>Track your wins and toggle notifications with <code>/profile</code>.</li>
+                        <li>Users can't have more than <b>5 of their Pokémon</b> auctioned at once.</li>
+                        <li>You cannot bid on your own Pokémon.</li>
                         <li class="final-rule">No sniping in the last 5 minutes!</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+        <div id="reps" class="tab-content">
+            <div class="role-guide rep">
+                <h3>⭐ Reputation System</h3>
+                    <h4>Commands</h4>
+                    <p>
+                        <code>,rep &lt;user&gt;</code> — Give someone a rep point.<br>
+                        <code>,shame &lt;user&gt;</code> — Take one away.<br>
+                        <code>,rep_lb</code> — Leaderboard of nice people.<br>
+                        <code>,shame_lb</code> — Leaderboard of... less nice people.
+                    </p>
+                    <h4>Rules & Cooldowns</h4>
+                    <ul class="rules-list">
+                        <li>You can give or take rep once every 24 hours.</li>
+                        <li>You can't rep or shame yourself.</li>
+                        <li class="final-rule">Use wisely — social credit matters 🧠</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="extras" class="tab-content">
+            <div class="card">
+                <h2>General Conduct</h2>
+                <ul class="rules-list">
+                    <li>No bidding on your own Pokémon (applies to auctioneers too).</li>
+                    <li>No fake or shill bidding — includes collusion.</li>
+                    <li>No chatting in auction channels — 10 irrelevant msgs = 3-day aucban.</li>
+                    <li>Respect all auctioneers and participants.</li>
+                    <li class="final-rule">Abide by all rules to avoid penalties.</li>
+                </ul>
             </div>
         </div>
     </div>
