--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <li>Users can have at max of 5 of their pokes auctioned at the same time.</li>
                     <li>Pokemon owners are not allowed to get their pokes returned after it recieves a bid.</li>
                     <li>Poke Owners cannot bid on their own pokes, If done they will be granted a shiny <code>aucban</code>.</li>
-                    <li class="final-rule">If your request for auction details seem off,<br>an Auctioneer holds every right to suggest better details.</li>
+                    <li class="final-rule">If your request for auction details seem off, An <strong>Auctioneer</strong> holds every right to suggest better details.</li>
                 </ul>
             </div>
         </div>
